# online_platform

./: .env.prod.sample  .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci_cd.yml
config/: settings.py  urls.py
courses/: models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
courses/fixtures/: courses.json  lessons.json
courses/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_alter_lesson_video_url.py  0003_subscription.py  0004_alter_course_preview.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  urls.py  views.py
users/fixtures/: customusers.json  groups.json  payments.json
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_link_to_payment_payment_session_id.py
